@@ -49,8 +49,6 @@ byte_copy.o
 byte_cr.o
 byte_diff.o
 byte_rchr.o
-chkshsgr
-chkshsgr.o
 choose
 coe.o
 compile
